WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
41929
Property declarations in an object literal should not consider the prototype chain when being added to the new object
https://bugs.webkit.org/show_bug.cgi?id=41929
Summary
Property declarations in an object literal should not consider the prototype ...
Oliver Hunt
Reported
2010-07-08 22:06:49 PDT
Property declarations in an object literal should not consider the prototype chain when being added to the new object
Attachments
Patch
(38.62 KB, patch)
2010-07-08 22:18 PDT
,
Oliver Hunt
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2010-07-08 22:18:25 PDT
Created
attachment 61004
[details]
Patch
Sam Weinig
Comment 2
2010-07-08 22:22:55 PDT
Comment on
attachment 61004
[details]
Patch
> + > + The "direct" flag should only be set this put_by_id is to initialise > + an object literal.
Typo. initialise -> initialize. r=me.
Oliver Hunt
Comment 3
2010-07-08 22:48:12 PDT
Committed
r62896
: <
http://trac.webkit.org/changeset/62896
>
David Kilzer (:ddkilzer)
Comment 4
2010-08-24 10:09:00 PDT
(In reply to
comment #3
)
> Committed
r62896
: <
http://trac.webkit.org/changeset/62896
>
This caused
Bug 44240
. Fixed in
r65847
. <
http://trac.webkit.org/changeset/65847
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug