third_party/WebKit/LayoutTests/fast/js/script-tests/object-literal-direct-put.js
@@ -1,0 +1,15 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+description("This test ensures that properties on an object literal are put directly onto the created object, and don't call setters in the prototype chain.");
+
+shouldBeTrue("({a:true}).a");
+shouldBeTrue("({__proto__: {a:false}, a:true}).a");
+shouldBeTrue("({__proto__: {set a() {throw 'Should not call setter'; }}, a:true}).a");
+shouldBeTrue("({__proto__: {get a() {throw 'Should not reach getter'; }}, a:true}).a");
+shouldBeTrue("({__proto__: {get a() {throw 'Should not reach getter'; }, b:true}, a:true}).b");
+
+shouldBeTrue("({__proto__: {__proto__: {a:false}}, a:true}).a");
+shouldBeTrue("({__proto__: {__proto__: {set a() {throw 'Should not call setter'; }}}, a:true}).a");
+shouldBeTrue("({__proto__: {__proto__: {get a() {throw 'Should not reach getter'; }}}, a:true}).a");
+shouldBeTrue("({__proto__: {__proto__: {get a() {throw 'Should not reach getter'; }, b:true}}, a:true}).b");
+
+var successfullyParsed = true;
